Fixed x bttn styling so it does not overflow.

--- a/onestoppopshop/src/components/cart.module.css
+++ b/onestoppopshop/src/components/cart.module.css
@@ -32,8 +32,8 @@
     border-radius: 10px;
     font-size: clamp(1.5rem, 1.9rem, 3rem);
     text-align: center;
-    height: 5%;
-    width: 10%;
+    width: 2rem;
+    height: 2rem;
     color: white;
     background-color: #24252A;
 }
